# cpp-17-concurrency-practice

./: CMakeLists.txt  main.cpp
chapter-1/: 1_hello_world.h
chapter-2/: 1_read_danglign_reference_from_detached_thread.h  2_thread_guard.h  3_call_member_func_from_thread.h  4_scoped_thread.h  5_master_and_slave_threads.h
chapter-3/: 1_protecting_list_with_mutex.h  2_bypass_mutex_with_func.h  3_thread_safe_stack.h  4_lock_two_mutexes_simultaneous.h  5_hierarchical_mutex.h  6_get_lock.h  7_infamous_double_checking_and_call_once.h  8_shared_mutex_dns_cache.h
chapter-4/: 10_flex_barriers.h  1_wait_for_data_with_condiitonal_variable.h  2_threadsafe_queue.h  3_async_future.h  4_packaged_task.h  5_parallel_quick_sort.h  6_message_passing_atm_architecture.h  7_future_continuation.h  8_latches.h  9_barriers.h
chapter-6/: 1_fine_grained_threadsafe_queue.h  2_fine_grained_threadsafe_hashmap.h
chapter-7/: 1_lockfree_queue.h
chapter-8/: 1_parallel_quicksort_using_stack_of_pending_chunks_to_sort.h
presentation-examples/: example_1.h  example_2.h  example_3.h  example_4.h  example_5.h
